@@ -1,3 +1,8 @@
+2011-09-06  Luis Machado  <lgustavo@codesourcery.com>
+
+	* frame.c (has_stack_frames): Check for currently selected
+	traceframe.
+
 2011-09-06  Pedro Alves  <pedro@codesourcery.com>
 
 	* event-top.h (MAXPROMPTS, struct prompts): Delete.
